--- a/main.html
+++ b/main.html
@@ -7,9 +7,11 @@
 </head>
 
 <body>
+	<div style="width:470px ; padding:20px; border:1px solid black">
 	 <div style="width:300px; background-color:lightblue; border:15px solid blue; padding:50px; margin:20px"> 
 		This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.
     </div>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
